Add css and elements to homepage

--- a/books/templates/books/base.html
+++ b/books/templates/books/base.html
@@ -26,6 +26,7 @@
       integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
       crossorigin="anonymous"
     ></script>
+    <link rel="stylesheet" href="{% static 'css/style.css'%}">
 
     <!-- Font Awesome -->
     <link
@@ -136,7 +137,7 @@
     <!-- footer -->
     <!-- code adapted from https://mdbootstrap.com/docs/standard/navigation/footer/ -->
 
-    <footer class="mt-auto bg-light text-center text-white">
+    <footer class="mt-auto text-center text-white">
       <!-- Grid container -->
       <div class="container p-4 pb-0">
         <!-- Section: Social media -->
