Update ugly homepage design

--- a/books/templates/books/base.html
+++ b/books/templates/books/base.html
@@ -139,7 +139,7 @@
 
     <footer class="mt-auto text-center text-white">
       <!-- Grid container -->
-      <div class="container p-4 pb-0">
+      <div class="container p-lg-4 pb-0">
         <!-- Section: Social media -->
         <section class="mb-4">
           <!-- Facebook -->
