--- a/static/css/homepage.css
+++ b/static/css/homepage.css
@@ -3,7 +3,13 @@
     margin: 0;
     box-sizing: border-box;
   }
-/*  adapted from https://codepen.io/tomdu3/pen/VwqQNWo */
+:root {
+    --bg-color: var(--ivory); 
+}
+.home-main > div>div>div{
+    background-color: var(--ivory);
+}
+/*  adapted from https://codepen.io/tomdu3/pen/VwqQNWo find original */
   .waviy {
     position: relative;
   }
@@ -27,3 +33,56 @@
     height: 15rem;
     display: inline-block;
   }
+
+  /* ADAPTED FROM: */
+  /* title styles */
+.home-title span{
+    position: relative;
+    overflow: hidden;
+    display: block;
+    line-height: 1.2;
+}
+
+.home-title span::after{
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background: var(--baby-blue);
+    animation: a-ltr-after 2s cubic-bezier(.77,0,.18,1) forwards;
+    transform: translateX(-101%);
+}
+
+.home-title span::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background: var(--bg-color);
+    animation: a-ltr-before 2s cubic-bezier(.77,0,.18,1) forwards;
+    transform: translateX(0);
+}
+
+.home-title span:nth-of-type(1)::before,
+.home-title span:nth-of-type(1)::after{
+    animation-delay: 1s;
+}
+
+.home-title span:nth-of-type(2)::before,
+.home-title span:nth-of-type(2)::after{
+    animation-delay: 1.5s;
+}
+
+@keyframes a-ltr-after{
+    0% {transform: translateX(-100%)}
+    100% {transform: translateX(101%)}
+}
+
+@keyframes a-ltr-before{
+    0% {transform: translateX(0)}
+    100% {transform: translateX(200%)}
+}
