--- a/books/templates/books/home.html
+++ b/books/templates/books/home.html
@@ -40,8 +40,13 @@ https://codepen.io/tomdu3/pen/VwqQNWo {% endcomment %}
             learning, growth, and self-discovery through the magic of
             literature.
           </p>
-          <a href="{% url 'register' %}" class="btn btn-primary">Register</a>
-          <a href="{% url 'login' %}" class="btn btn-secondary">Login</a>
+          {% if user.is_authenticated %} 
+            <a href="{% url 'user_page' %}" class="btn btn-secondary text-white">My Books</a>
+            <a href="{% url 'user_profile' %}" class="btn btn-outline-danger ">My Profile</a>
+          {% else %} 
+            <a href="{% url 'login' %}" class="btn btn-primary">Login</a>
+            <a href="{% url 'register' %}" class="btn btn-outline-secondary">Register</a>
+          {% endif %}
         </div>
       </div>
     </div>
