--- a/books/templates/books/user_page.html
+++ b/books/templates/books/user_page.html
@@ -3,44 +3,46 @@
 {% block style %}
 {% endblock %}
 {% block content %}
-<div class="title text-center">
-    <h1>{{user.username}}'s Page</h1>
+<div class="title text-center pt-4 h1">
+    <h1>{{ user.username|capfirst }}'s Added Books</h1>
 </div>
 {% if user.is_authenticated %}
 {% if books|length != 0 %}
-<table class="table table-striped">
-    <thead>
-        <tr>
-            <th>#</th>
-            <th>Author</th>
-            <th>Title</th>
-            <th>Category</th>
-            <th></th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        {% for book in books %}
+<div class="container pt-lg-4 pt-sm-2 col-lg-8">
+    <table class="table table-striped">
+        <thead>
             <tr>
-                <td>{{ forloop.counter }}</td>
-                <td>{{ book.author }}</td>
-                <td><a href="{% url 'book_detail' slug=book.slug %}">{{ book.title }}</a></td>
-                <td>{{ book.category }}</td>
-                <td>
-                    <a href="{% url 'book_edit' slug=book.slug %}" class="btn btn-primary btn-sm">Edit</a>
-                </td>
-                <td>
-                    <a href="{% url 'book_delete' slug=book.slug %}" class="btn btn-danger btn-sm">Delete</a>
-                </td>
+                <th class="small-none">#</th>
+                <th>Author</th>
+                <th>Title</th>
+                <th class="small-none">Category</th>
+                <th class="text-center">Modify</th>
             </tr>
-        {% endfor %}
-    </tbody>
-</table>
+        </thead>
+        <tbody>
+            {% for book in books %}
+                <tr>
+                    <td class="small-none align-middle">{{ forloop.counter }}</td>
+                    <td class="h6 align-middle">{{ book.author }}</td>
+                    <td class="align-middle"><a href="{% url 'book_detail' slug=book.slug %}" class="book-link">{{ book.title }}</a></td>
+                    <td class="small-none h6 align-middle">{{ book.category }}</td>
+                    <td class="d-flex flex-row gap-1 justify-content-center align-middle">
+                        <a href="{% url 'book_edit' slug=book.slug %}" class="btn btn-primary btn-sm">Edit</a>
+                        <a href="{% url 'book_delete' slug=book.slug %}" class="btn btn-danger btn-sm">Delete</a>
+                    </td>
+                </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+</div>
 {% else %}
 <div class="text-center">
     <h3>No books yet</h3>
 </div>
 {% endif %}
+<div class="container text-center">
+    <a href="{% url 'book_add' %}" class="btn btn-outline-danger">Add Book</a>
+</div>
 {% endif %}
 {% endblock %}
 {% block script %}
