Fix book edit form

--- a/books/templates/books/book_edit.html
+++ b/books/templates/books/book_edit.html
@@ -22,7 +22,8 @@
           </div>
           
             {% endif %}
-          <form action="{% url 'book_edit' book.slug %}" method="post">
+          <div class="d-flex justify-content-center">
+          <form class="col-10" action="{% url 'book_edit' book.slug %}" method="post">
             {% csrf_token %}
             <div class="form-group">
               <label for="title">Title:</label>
@@ -42,20 +43,21 @@
             </div>
             <div class="form-group">
               <label for="image_url">Image URL:</label>
-              <input type="file" class="form-control" id="image_url" name="image_url" value="{{ book.image_url }}>
+              <input type="file" class="form-control" id="image_url" name="image_url" value="{{ book.image_url }}">
             </div>
             <div class="form-group">
                 <label for="category">Category:</label>
                 <select class="form-control" id="category" name="category">
                   {% for category in categories %}
-                    <option value="{{ category.id }}"{% if book.category == category %} selected{% endif %}>{{ category.name }}</option>
+                    <option value="{{ category.id }}"{% if book.category == category %} selected {% endif %} > {{ category.name }} </option>
                   {% endfor %}
                 </select>
               </div>
-            <div class="form-group">
+            <div class="form-group text-end">
               <button type="submit" class="btn btn-primary">Update Book</button>
             </div>
           </form>
+        </div>
         </div>
       </div>
     </div>
