Fix Book edit and add forms

--- a/books/templates/books/book_edit.html
+++ b/books/templates/books/book_edit.html
@@ -1,5 +1,6 @@
 {% extends "books/base.html" %}
 {% load static %}
+
 {% block content %}
 <div class="container mt-5">
   <div class="row">
@@ -26,28 +27,28 @@
           <form class="col-10" action="{% url 'book_edit' book.slug %}" method="post">
             {% csrf_token %}
             <div class="form-group">
-              <label for="title">Title:</label>
-              <input type="text" class="form-control" id="title" name="title" value="{{ book.title }}">
+              <label class="form-label" for="title">Title:</label>
+              <input type="text" class="form-control" id="title" name="title" value="{{ book.title }}" placeholder="Title (required)" required>
             </div>
             <div class="form-group">
-              <label for="author">Author:</label>
-              <input type="text" class="form-control" id="author" name="author" value="{{ book.author }}">
+              <label class="form-label" for="author">Author:</label>
+              <input type="text" class="form-control" id="author" name="author" value="{{ book.author }}" placeholder="Author (required)" required>
             </div>
             <div class="form-group">
-              <label for="short_description">Short Description:</label>
-              <textarea class="form-control" id="short_description" name="short_description" rows="3">{{ book.short_description }}</textarea>
+              <label class="from-label" for="short_description">Short Description:</label>
+              <textarea class="form-control" id="short_description" name="short_description" rows="3" placeholder="Short Description (required)" required>{{ book.short_description }}</textarea>
             </div>
             <div class="form-group">
-              <label for="full_description">Full Description:</label>
-              <textarea class="form-control" id="full_description" name="full_description" rows="10">{{ book.full_description }}</textarea>
+              <label class="form-label" for="full_description">Full Description:</label>
+              <textarea class="form-control" id="full_description" name="full_description" rows="10" placeholder="Full Description (required)" required>{{ book.full_description }}</textarea>
             </div>
             <div class="form-group">
-              <label for="image_url">Image URL:</label>
+              <label class="form-label" for="image_url">Image URL:</label>
               <input type="file" class="form-control" id="image_url" name="image_url" value="{{ book.image_url }}">
             </div>
             <div class="form-group">
-                <label for="category">Category:</label>
-                <select class="form-control" id="category" name="category">
+                <label class="form-label" for="category">Category:</label>
+                <select class="form-select" id="category" name="category">
                   {% for category in categories %}
                     <option value="{{ category.id }}"{% if book.category == category %} selected {% endif %} > {{ category.name }} </option>
                   {% endfor %}
