--- a/books/templates/books/book_add.html
+++ b/books/templates/books/book_add.html
@@ -14,19 +14,19 @@
             <form class="col-10" method="post" enctype="multipart/form-data">
               {% csrf_token %}
               <div class="form-group">
-                <label class="form-label" for="title">Title</label>
+                <label class="form-label" for="title">Title:</label>
                 <input type="text" class="form-control" id="title" name="title" placeholder="Title (required)" value="{{ book.title }}" required>
               </div>
               <div class="form-group">
-                <label class="form-label" for="author">Author</label>
+                <label class="form-label" for="author">Author:</label>
                 <input type="text" class="form-control" id="author" name="author" placeholder="Author (required)" value="{{ book.author }}" required>
               </div>
               <div class="form-group">
-                <label class="form-label" for="short_description">Short Description</label>
+                <label class="form-label" for="short_description">Short Description:</label>
                 <textarea class="form-control" id="short_description" name="short_description" placeholder="Short Description (required)" rows="3" required>{{ book.short_description }}</textarea>
               </div>
               <div class="form-group">
-                <label class="form-label" for="full_description">Full Description</label>
+                <label class="form-label" for="full_description">Full Description:</label>
                 <textarea class="form-control" id="full_description" name="full_description" rows="10" placeholder="Full Description (required)" required>{{ book.full_description }}</textarea>
               </div>
               <div class="form-group">
@@ -35,7 +35,7 @@
               </div>
               <div class="form-group">
                   <label class="form-label" for="category">Category:</label>
-                  <select class="form-control" id="category" name="category" required>
+                  <select class="form-select" id="category" name="category" required>
                     {% for category in categories %}
                       <option value="{{ category.id }}">{{ category.name }}</option>
                     {% endfor %}
