Add style book detail

--- a/books/templates/books/book_detail.html
+++ b/books/templates/books/book_detail.html
@@ -2,7 +2,7 @@
 <div class="container mt-5">
   <div class="row col-10 mx-auto">
     <div class="col-12">
-      <div class="card">
+      <div class="card book-card">
         <div class="row container pb-md-4 mx-auto">
           <div class="col-12 col-md-6 text-center">
             <h2 class="card-title">{{ book.title }}</h2>
@@ -66,7 +66,7 @@
 
     <div class="row col-md-12">
       <div class="card-body">
-        <div class="card-text">{{ book.full_description|safe }}</div>
+        <div class="card-text description">{{ book.full_description|safe }}</div>
       </div>
     </div>
     {% endblock %}
