Add user favourites syle and remove functionality

--- a/books/templates/books/book_detail.html
+++ b/books/templates/books/book_detail.html
@@ -1,4 +1,8 @@
-{% extends "books/base.html" %} {% load static %} {% block content %}
+{% extends "books/base.html" %}
+
+{% load static %}
+
+{% block content %}
 <div class="container mt-5">
   <div class="row col-10 mx-auto">
     <div class="col-12">
