Add styling profile update form

--- a/authors/templates/user_profile.html
+++ b/authors/templates/user_profile.html
@@ -34,7 +34,7 @@
             />
             {% endif %}
           </div>
-          <div class="container">
+          <div class="container pt-3">
             <p><span class="fw-bold">Username:</span> {{ user.username }}</p>
             <p><span class="fw-bold">Email:</span> {{ user.email }}</p>
           </div>
